--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backendbarbershop",
+  "name": "backendbarbershopbuild1",
   "version": "1.0.0",
   "type": "module",
   "main": "server.js",
